# Curtis-Serial-Bridge

Arduino/FourDACSerialBinary/: FourDACSerialBinary.ino
Arduino/bluetoothSerial9-3-12-2020-2/: PG9038S.py  bluetoothSerial9.py  launcher.sh  readme.md  remoteControl.service
Arduino/firmware_v1-2/: firmware_v1-2.ino
catkin_ws/src/arwac_v2/: CMakeLists.txt  package.xml
catkin_ws/src/arwac_v2/launch/: v2sim.launch
catkin_ws/src/arwac_v2/models/plugins/: CMakeLists.txt  v2_plugin.cpp
catkin_ws/src/arwac_v2/models/v2/: model.config  model.sdf
catkin_ws/src/arwac_v2/models/v2/meshes/: arwac_v2.dae  arwac_v2.stl  arwac_v2_modified.stl  arwac_v2skew.dae  wheel.dae  wheel.stl
catkin_ws/src/arwac_v4/: CMakeLists.txt  package.xml
catkin_ws/src/arwac_v4/launch/: v4sim.launch  v4sim.world
catkin_ws/src/arwac_v4/models/plugins/: CMakeLists.txt  v4_drive_controller.cpp
catkin_ws/src/arwac_v4/models/v4/: model.config  model.sdf
catkin_ws/src/arwac_v4/models/v4/meshes/: arwac_v4_wheel_scale.dae  back_left_wheel_mount_skew.stl  back_right_wheel_mount_skew.stl
